<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_32sdp"
        tools:context=".ui.activities.TodaysWeatherActivity">


    <TextView
            android:id="@+id/tv_weather"
            android:text="@string/today_s_weather"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
            android:id="@+id/tv_weather_value"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_weather"
    />
    <TextView
            android:id="@+id/tv_weather_desc"
            android:text="@string/description"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_weather"
            app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
            android:id="@+id/tv_weather_desc_value"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_weather_desc"
            app:layout_constraintStart_toEndOf="@id/tv_weather_desc"
    />
    <TextView
            android:id="@+id/tv_humidity"
            android:text="@string/humidity"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_weather_desc"
            app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
            android:id="@+id/tv_humidity_value"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_humidity"
            app:layout_constraintStart_toEndOf="@id/tv_humidity"
    />
    <TextView
            android:id="@+id/tv_min_max_degree"
            android:text="@string/min_max_temp"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_humidity"
            app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
            android:id="@+id/tv_min_max_degree_value"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_min_max_degree"
            app:layout_constraintStart_toEndOf="@id/tv_min_max_degree"
    />
    <TextView
            android:id="@+id/tv_wind_speed"
            android:text="@string/wind_speed"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_min_max_degree"
            app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
            android:id="@+id/tv_wind_speed_value"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_wind_speed"
            app:layout_constraintStart_toEndOf="@id/tv_wind_speed"
    />
    <TextView
            android:id="@+id/tv_wind_deg"
            android:text="@string/wind_degree"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_wind_speed"
            app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
            android:id="@+id/tv_wind_degree_value"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_wind_deg"
            app:layout_constraintStart_toEndOf="@id/tv_wind_deg"
    />
    <TextView
            android:id="@+id/tv_rain_percent"
            android:text="@string/rain_chances"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_wind_deg"
            app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
            android:id="@+id/tv_rain_percent_value"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_rain_percent"
            app:layout_constraintStart_toEndOf="@id/tv_rain_percent"
    />

    <ProgressBar
            android:id="@+id/progress_bar"
            android:visibility="gone"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>